# my-tesm-tests

./: .gitattributes  .gitignore  opencode.json  route.md
.prompts/: backend-developer.md  backend-tech-lead.md  chief-tech-lead.md  frontend-developer.md  frontend-tech-lead.md  native-developer.md  native-tech-lead.md  planner.md  product-manager.md  qa.md
.prompts_bak/: chief-tech-lead.md  frontend-tech-lead.md
blog-website/api/: .env.e2e  .env.example  Cargo.toml  README.md  docker-compose.e2e.yml  docker-compose.yml
blog-website/api/migrations/: 20260212120000_init.sql
blog-website/api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
blog-website/api/src/db/: mod.rs
blog-website/api/src/domain/: mod.rs  validation.rs
blog-website/api/src/domain/auth/: service.rs
blog-website/api/src/domain/posts/: cursor.rs  mod.rs  service.rs
blog-website/api/src/http/: csrf.rs  extract.rs  mod.rs  rate_limit.rs  routes.rs  session.rs  types.rs
blog-website/api/src/http/handlers/: auth.rs  fallback.rs  posts.rs  users.rs
blog-website/api/src/http/middleware/: request_id.rs
blog-website/api/src/repo/: mod.rs  posts_repo.rs  sessions_repo.rs  users_repo.rs
blog-website/api/tests/: http_integration.rs
google-flights-mcp/: .env  README.md  package.json  pnpm-lock.yaml  tsconfig.json
json-diff/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
sorting-visualizer/: README.md  index.html  package-lock.json  package.json
travel-plan-web-next/: .env.test  .gitignore  CLAUDE.md  README.md  auth.ts  (+9 more)
(+661 files in other folders)
